--- a/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -1,30 +1,180 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
     android:viewportWidth="108"
     android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
+  <path
+      android:pathData="M71.98,51C71.98,60.941 63.925,69 53.989,69C44.053,69 36,60.941 36,51C36,41.059 44.053,33 53.989,33C63.925,33 71.98,41.059 71.98,51"
+      android:strokeWidth="1"
+      android:fillColor="#00C2B5"
+      android:fillType="evenOdd"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M71.98,91.889C71.98,81.949 63.925,73.89 53.989,73.89C44.053,73.89 36,81.949 36,91.889L71.98,91.889Z"
+      android:strokeWidth="1"
+      android:fillColor="#006179"
+      android:fillType="evenOdd"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M71.98,51C71.98,60.941 63.925,69 53.989,69C44.053,69 36,60.941 36,51C36,41.059 44.053,33 53.989,33C63.925,33 71.98,41.059 71.98,51"
+      android:strokeWidth="1"
+      android:fillColor="#00C2B5"
+      android:fillType="evenOdd"
+      android:strokeColor="#00000000"/>
+  <group>
+    <clip-path android:pathData="M71.98,51C71.98,60.941 63.925,69 53.989,69C44.053,69 36,60.941 36,51C36,41.059 44.053,33 53.989,33C63.925,33 71.98,41.059 71.98,51 M 0,0"/>
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
+        android:pathData="M37,56h36v3h-36z"
+        android:strokeAlpha="0.75"
         android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:fillColor="#00C2B5"
+        android:fillType="evenOdd"
+        android:strokeColor="#00000000"
+        android:fillAlpha="0.75"/>
+  </group>
+  <path
+      android:pathData="M71.98,91.889C71.98,81.949 63.925,73.89 53.989,73.89C44.053,73.89 36,81.949 36,91.889L71.98,91.889Z"
+      android:strokeAlpha="0.75"
+      android:strokeWidth="1"
+      android:fillColor="#006179"
+      android:fillType="evenOdd"
+      android:strokeColor="#00000000"
+      android:fillAlpha="0.75"/>
+  <group>
+    <clip-path android:pathData="M71.98,91.889C71.98,81.949 63.925,73.89 53.989,73.89C44.053,73.89 36,81.949 36,91.889L71.98,91.889Z M 0,0"/>
+    <path
+        android:pathData="M38,74h33v3h-33z"
+        android:strokeAlpha="0.75"
+        android:strokeWidth="1"
+        android:fillColor="#006179"
+        android:fillType="evenOdd"
+        android:strokeColor="#00000000"
+        android:fillAlpha="0.75"/>
+  </group>
+  <path
+      android:pathData="M33.147,56.9h4.188v35h-4.188z"
+      android:strokeWidth="1"
+      android:fillColor="#B3B3B2"
+      android:fillType="nonZero"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M33.147,56.624h4.188v2.059h-4.188z"
+      android:strokeWidth="1"
+      android:fillColor="#878787"
+      android:fillType="nonZero"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M33.147,72.768h4.188v4.094h-4.188z"
+      android:strokeWidth="1"
+      android:fillColor="#878787"
+      android:fillType="nonZero"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M71.119,56.9h4.188v35h-4.188z"
+      android:strokeWidth="1"
+      android:fillColor="#B3B3B2"
+      android:fillType="nonZero"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M71.119,56.624h4.188v2.059h-4.188z"
+      android:strokeWidth="1"
+      android:fillColor="#878787"
+      android:fillType="nonZero"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M71.119,72.768h4.188v4.094h-4.188z"
+      android:strokeWidth="1"
+      android:fillColor="#878787"
+      android:fillType="nonZero"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M26,44h56.867v12.624h-56.867z"
+      android:strokeWidth="1"
+      android:fillColor="#FFD601"
+      android:fillType="nonZero"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M26,55.757l11.757,-11.757l-5.526,0l-6.232,6.232z"
+      android:strokeWidth="1"
+      android:fillColor="#3C3C3B"
+      android:fillType="nonZero"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M44.926,44l-12.622,12.624l5.524,0l12.624,-12.624z"
+      android:strokeWidth="1"
+      android:fillColor="#3C3C3B"
+      android:fillType="nonZero"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M57.622,44l-12.624,12.624l5.524,0l12.624,-12.624z"
+      android:strokeWidth="1"
+      android:fillColor="#3C3C3B"
+      android:fillType="nonZero"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M70.317,44l-12.624,12.624l5.524,0l12.624,-12.624z"
+      android:strokeWidth="1"
+      android:fillColor="#3C3C3B"
+      android:fillType="nonZero"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M82.867,44.144l-12.48,12.48l5.524,0l6.956,-6.956z"
+      android:strokeWidth="1"
+      android:fillColor="#3C3C3B"
+      android:fillType="nonZero"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M26,70.079h56.867v4.959h-56.867z"
+      android:strokeWidth="1"
+      android:fillColor="#FFD601"
+      android:fillType="nonZero"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M26.95,70.079l-0.95,0.95l0,3.465l4.415,-4.415z"
+      android:strokeWidth="1"
+      android:fillColor="#3C3C3B"
+      android:fillType="nonZero"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M34.911,70.079l-4.959,4.959l3.465,0l4.959,-4.959z"
+      android:strokeWidth="1"
+      android:fillColor="#3C3C3B"
+      android:fillType="nonZero"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M42.873,70.079l-4.957,4.959l3.465,0l4.957,-4.959z"
+      android:strokeWidth="1"
+      android:fillColor="#3C3C3B"
+      android:fillType="nonZero"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M50.836,70.079l-4.959,4.959l3.465,0l4.959,-4.959z"
+      android:strokeWidth="1"
+      android:fillColor="#3C3C3B"
+      android:fillType="nonZero"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M58.798,70.079l-4.959,4.959l3.465,0l4.959,-4.959z"
+      android:strokeWidth="1"
+      android:fillColor="#3C3C3B"
+      android:fillType="nonZero"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M66.76,70.079l-4.957,4.959l3.465,0l4.957,-4.959z"
+      android:strokeWidth="1"
+      android:fillColor="#3C3C3B"
+      android:fillType="nonZero"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M74.723,70.079l-4.959,4.959l3.465,0l4.959,-4.959z"
+      android:strokeWidth="1"
+      android:fillColor="#3C3C3B"
+      android:fillType="nonZero"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M82.867,70.079l-0.182,0l-4.959,4.959l3.467,0l1.674,-1.676z"
+      android:strokeWidth="1"
+      android:fillColor="#3C3C3B"
+      android:fillType="nonZero"
+      android:strokeColor="#00000000"/>
 </vector>
